Figure 1a notebook, data, and figure added

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,29 @@
 __pycache__
-Manuscript_Main_Figures/PaperFig1.ipynb
-Manuscript_Main_Figures/PaperFig2.ipynb
-Manuscript_Main_Figures/PaperFig3.ipynb
+
+Data/S3A_OL_1_EFR____20190409T220940_20190409T221240_20240531T201722_0179_043_229_1620_MAR_R_NT_004.SEN3
+Data/S3A_SR_2_LAN_SI_20190409T220052_20190409T221734_20230529T124528_1001_043_229______LN3_R_NT_005.SEN3
+Data/pysiral-l1p-sentinel3a-l2_lan_si-rep-north-20190301T052353-20190301T053158-waveform_features.nc
+Data/pysiral-l1p-sentinel3a-l2_lan_si-rep-north-20190409T220134-20190409T221733-waveform_features.nc
+Data/sentinel3_oib_xo_unified.nc
+Data/sentinel3_oib_xo_unified.nc
+Data/sentinel3_sral_products_20160921_20230430.parquet
+Data/IceBird
+Data/cv_fold_results
+Data/Monthly_gridded_narrs
+Data/PARARCMIP2017
+Data/S3A_OL_1_EFR____20220414T212458_20220414T212758_20240605T031041_0179_084_143_1620_MAR_R_NT_004.SEN3
+Data/S3A_SR_2_LAN_SI_20220414T211653_20220414T213310_20230729T105126_0976_084_143______LN3_R_NT_005.SEN3
+Data/Surface_masks
+Data/merged_s3_aoo_evaluation_data.csv
+Data/merged_s3_bgep_evaluation_data.csv
+Data/merged_s3_icebird_gridded_evaluation_data.csv
+Data/NaRRS_Sentinel3_snow_depth_and_sea_ice_thickness_along_track_nh_20220414.nc
+Data/S3_icebird_overlap_counts_v2.csv
+Data/S3_NaRRS_snow_depth_sit_monthly_stats_nh_2021-2022_by_region_and_type.csv
+
 Misc/sentinel3_sral_products_20160921_20230430.parquet
+Misc/satpy_customs
+
 MWR_Preprocessing/ATMCorrectionScale.py
 MWR_Preprocessing/AtmosCorrectionSupplement.ipynb
 MWR_Preprocessing/era5_4_rttov_gc.py
@@ -10,9 +31,40 @@ MWR_Preprocessing/era5_ml2pl_table.csv
 MWR_Preprocessing/era5_var_names.csv
 MWR_Preprocessing/sentinel3_rttov_operation.py
 MWR_Preprocessing/tb_tiepoints.py
+
 SRAL_Preprocessing/pysiral_ku_features.py
 SRAL_Preprocessing/WaveformFeatures.ipynb
+
 test
+
 tools/auxiliary_dl.py
 tools/common_functions.py
 tools/S3_SITHEM_DL.py
+tools/SeaIceAdvection.py
+
+Misc/rttov_nh_failed_products.txt
+
+Manuscript_Main_Figures/PaperFig1.ipynb
+Manuscript_Main_Figures/PaperFig1b.ipynb
+Manuscript_Main_Figures/ku_band_waveform_features_example.png
+Manuscript_Main_Figures/PaperFig1c.ipynb
+Manuscript_Main_Figures/S3_mwr_gr_and_sral_features_example.png
+Manuscript_Main_Figures/PaperFig1d.ipynb
+Manuscript_Main_Figures/S3_OIB_unified_OIB_snow_depth.png
+Manuscript_Main_Figures/PaperFig2.ipynb
+Manuscript_Main_Figures/s3_monthly_gridded_snow_depth_sea_ice_thickness_2021_with_daily_scatter_and_olci.png
+Manuscript_Main_Figures/PaperFig3.ipynb
+Manuscript_Main_Figures/s3_snow_depth_and_sea_ice_thickness_multisource_evaluation.png
+
+Manuscript_Supplementary_Figures/mW99_snow_depth_and_sea_ice_thickness_multisource_evaluation.png
+
+IceBird_Comparison/media
+IceBird_Comparison/S3IceBirdValidation01Hz.ipynb
+
+AOO_comparison/S3_AOO_ULS.ipynb
+
+BGEP_Comparison/S3_BGEP_ULS.ipynb
+
+Model_Deployment/MonthlyS3SnowCiceThickness.py
+Model_Deployment/S3MonthlySpatialAnalysis.py
+Model_Deployment/sentinel3_snow_model_deployment.py
